feat(apple): ingest server notifications v2
